--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
@@ -1754,5 +1754,6 @@ de Hezz. S\'il vous plaît n\'allez pas plus loin, si cela ne va pas avec vous.
     <string name="hint_edt_phone">Numéro de téléphone</string>
     <string name="enter_one_time_pwd">Entrez un mot de passe unique</string>
     <string name="pickup_time_format">Pickup time: %s</string>
+    <string name="incentive">Incentives</string>
 
 </resources>																									
