--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -679,6 +679,7 @@
     <string name="bid_placed">Bid Placed</string>
     <string name="number_should_not_start_with_zero">Phone number should not start with 0</string>
     <string name="pickup_time_format">Pickup time: %s</string>
+    <string name="incentive">Incentives</string>
     <!--Strings for Subscription plans-->
 
 
