--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ldrtl/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ldrtl/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="pickup_time_format">Pickup time: %s</string>
+    <string name="incentive">Incentives</string>
 </resources>
