f_toll_data: add toll dialog

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1147,5 +1147,10 @@
     <string name="last_name">Last Name</string>
     <string name="first_name_required">First name is mandatory</string>
     <string name="pickup_time_format">Pickup time: %s</string>
+    <string name="tolls_incurred_during_ride">Following tolls are incurred during ride, Confirm them once</string>
+    <string name="add_toll">Add Toll</string>
+    <string name="toll_fare">Toll Fare</string>
+    <string name="toll_name">Toll Name</string>
+    <string name="invalid_fare">Invalid fare</string>
 
 </resources>
