--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1152,5 +1152,7 @@
     <string name="toll_fare">Toll Fare</string>
     <string name="toll_name">Toll Name</string>
     <string name="invalid_fare">Invalid fare</string>
+    <string name="are_you_sure_you_want_to_delete_this_toll">Are you sure you want to delete this toll?</string>
+    <string name="edit_toll">Edit Toll</string>
 
 </resources>
