--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ar/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ar/strings.xml
@@ -685,6 +685,13 @@
     <string name="terms_of_schedule">شروط الجدول</string>
     <string name="faqs">أسئلة وأجوبة</string>
     <string name="pickup_time_format">Pickup time: %s</string>
+    <string name="emergency_contacts">جهة اتصال للطوارئ</string>
+    <string name="add_contacts">اضف جهات اتصال</string>
+    <string name="please_select_some_contacts_first">يرجى اختيار بعض جهات الاتصال أولاً</string>
+    <string name="are_you_sure_want_to_disable_emergency">هل أنت متأكد من أنك تريد تعطيل وضع الطوارئ؟ </string>
+    <string name="edit">تصحيح</string>
+    <string name="configure_your_emergency_contacts">جهة اتصال للطوارئ
+تكوين الخاص بك</string>
     <!--login with phone-->
 
 </resources>
