wl_dev:- check(matching) added for confirm fields

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1157,5 +1157,6 @@
     <string name="other">Other</string>
     <string name="please_specify_the_reason">Please specify the reason</string>
     <string name="customer_live_location">Customer Live Location</string>
+    <string name="not_match">not match</string>
 
 </resources>
