f_max_bid_capping: ceck added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1160,5 +1160,6 @@
     <string name="not_match">not match</string>
     <string name="please_enter_email">Please enter email</string>
     <string name="error_empty_mandatory_field">%s is a mandatory field.</string>
+    <string name="please_enter_less_value_for_bid">Please enter less value for bid</string>
 
 </resources>
