--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1164,4 +1164,14 @@
     <string name="please_enter_less_value_for_bid">Please enter less value for bid</string>
     <string name="note">Note</string>
 
+    <string name="service_un_available_msg">Our service is currently unavailable. Reach out for us between %s</string>
+    <string name="please_select_gender">Please select gender</string>
+    <string name="please_enter_date_of_birth">Please enter date of birth</string>
+    <string name="hint_gender">Select gender</string>
+    <string name="gender_male">Male</string>
+    <string name="gender_female">Female</string>
+    <string name="gender_others">Others</string>
+    <string name="label_select_gender">Select your gender</string>
+    <string name="label_enter_date_of_birth">Enter your date of birth</string>
+    <string name="hint_date_of_birth">Date of birth</string>
 </resources>
