--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1212,6 +1212,8 @@
     <string name="emergency_mode_enabled">Emergency Mode Enabled</string>
     <string name="call_support">Call Support</string>
     <string name="included">included</string>
+    <string name="here_maps_feedback">Here Maps Feedback</string>
+    <string name="add_a_place">Add a place</string>
     <string name="are_you_sure_you_want_to_delete_this_image">Are you sure you want to delete this image?</string>
     <string name="choose_image_from">Choose Image from</string>
     <string name="send_invoice">Send Invoice</string>
