wl_dev: Credits Home Fragment ui changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -768,7 +768,7 @@
     <string name="title_earn_more_credits">और Credits कमाऐं</string>
     <string name="share_your_credits">Credits शेयर करें</string>
     <string name="total_credits_earned">कुल Credits कमाए</string>
-    <string name="commission_saved">commission बचाया</string>
+    <string name="commission_saved">Commission बचाया</string>
     <string name="refer_a_driver">Refer a Driver</string>
     <string name="refer_a_customer">Refer a Customer</string>
     <string name="advertise_for_us">Advertise for us</string>
