--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1213,5 +1213,6 @@
     <string name="call_support">Call Support</string>
     <string name="included">included</string>
     <string name="are_you_sure_you_want_to_delete_this_image">Are you sure you want to delete this image?</string>
+    <string name="choose_image_from">Choose Image from</string>
 
 </resources>
