--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1216,7 +1216,8 @@
     <string name="choose_image_from">Choose Image from</string>
 
     <!--Branding-->
-    <string name="branding_msg">Earn money upto %s by self branding</string>
+    <string name="branding_msg">Earn money upto %s by Self branding</string>
+    <string name="branding_msg_autos">Earn money upto %s by Autos branding</string>
     <string name="valid_till">Valid till %s</string>
     <string name="title_tasks">Tasks</string>
 
