--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1246,6 +1246,7 @@
     <string name="school">School</string>
     <string name="bank">Bank</string>
     <string name="atm">ATM</string>
+    <string name="places">Places</string>
     <string name="view_notes">View Notes</string>
 
     <!--Notes-->
