--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1034,6 +1034,7 @@
     <string name="terms_of_schedule">Terms of Schedule</string>
     <string name="faqs">FAQs</string>
     <string name="waze_navigation">Waze Navigation</string>
+    <string name="delivery_enable">Delivery Enable</string>
     <string name="enter_toll">Enter Toll</string>
     <string name="enter_toll_fare_during_ride">Enter Toll fare during ride</string>
     <string name="toll_value">Toll fare: %s</string>
