--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1274,4 +1274,5 @@
     <string name="select_fleet">Select Fleet</string>
     <string name="fleet">Fleet</string>
     <string name="error_no_fleets_in_this_city_format">No fleets in %s</string>
+    <string name="none">None</string>
 </resources>
