--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1284,4 +1284,5 @@
     <string name="none">None</string>
     <string name="offer_your_fare_for_trip">Offer your fare for trip</string>
     <string name="accept_for">Accept for</string>
+    <string name="waiting_for_customer">(Waiting for customer)</string>
 </resources>
