f_request_ringtone: Ringtone selection dialog server controlled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -769,6 +769,7 @@
 	<string name="your_income">आप की आय</string>
 	<string name="send_invoice">चालान भेजें</string>
 	<string name="add">जोड़ें</string>
+    <string name="select_ringtone">रिंगटोन का चयन करें</string>
 
 
 
